--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react-dom": "^18.0.0",
     "react-icons": "^4.3.1",
     "react-scripts": "5.0.1",
+    "typescript": "^4.9.5",
     "use-local-storage": "^2.3.6",
     "web-vitals": "^2.1.4"
   },
